<resources>
    <string name="app_name">时间的枪</string>

    <string name="timing">计时</string>
    <string name="statistic">时间统计</string>
    <string name="timeline">时间轴</string>
    <string name="settings">设置</string>
    <string name="signup">注册</string>
    <string name="login">登录</string>
    <string name="tourist_try"><![CDATA[游客试用 >>>]]></string>
    <string name="hint_login_password">请设置登录密码（不少于6位）</string>
    <string name="hint_account">请输入邮箱或手机号</string>
    <string name="hint_account_email">请输入邮箱(用于找回密码)</string>
    <string name="hint_account_phone">请输入手机号码</string>
    <string name="error_input_corrent_email">请输入正确的邮箱地址</string>
    <string name="error_password_too_short">密码至少六位</string>
    <string name="use_emial_signup">用邮箱注册</string>
    <string name="input_verify_code">请输入验证码</string>
    <string name="send_verify_code">发送验证码</string>
    <string name="input_username">请输入用户名</string>
    <string name="signup_success">注册成功</string>
    <string name="signup_fail">注册失败</string>
    <string name="error_username_not_null">用户名不能为空</string>
    <string name="hint_input_password">请输入密码</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="email">邮箱: </string>
    <string name="phone_number">手机号: </string>
    <string name="init_time">00:00:00</string>

    <string name="start_text">开始</string>
    <string name="stop_text">结束</string>
    <string name="pick_catelog">选择类别</string>
    <string name="select_color">选择颜色</string>
    <string name="catelogName">类别名称</string>
    <string name="add_catelog">增加类别</string>
    <string name="保存">保存</string>
    <string name="catelogName_cannot_null">类别名字不能为空</string>
    <string name="catelogName_isExisted">该类别名称已存在</string>
    <string name="must_select_color">必须选择一个颜色</string>
    <string name="click_for_new_catelog">点击创建新的类别</string>
    <string name="please_new_catelog">请选择或创建一个类别</string>
    <string name="no_record">未记录</string>
    <string name="click_for_add">点击添加</string>
    <string name="add_event">添加事件</string>
    <string name="select_catelog">选择类别</string>
    <string name="select_startTime">选择开始时间</string>
    <string name="select_stopTime">选择结束时间</string>
    <string name="greater_today">不能大于当前时间</string>
    <string name="starttime_greater_stoptime">开始时间不能大于结束时间</string>
    <string name="stoptime_less_starttime">结束时间不能小于开始时间</string>
    <string name="info_less">缺少信息</string>
    <string name="week">周</string>
    <string name="day">日</string>
    <string name="month">月</string>
    <string name="year">年</string>
    <string name="stastistic_catelog">类别统计</string>
    <string name="catelog_manage">类别管理</string>
    <string name="about">关于</string>
    <string name="quit_account">退出账号</string>
    <string name="modify_catelog">修改类别</string>
    <string name="sure_delete_catelog">确定删除选中的类别?</string>
    <string name="sure_delete_catelog_msg">注意：删除类别也会删除相关的事件</string>
    <string name="delete">删除</string>
    <string name="cancel">取消</string>
    <string name="modify_event">修改事件</string>
    <string name="delete_event">删除事件</string>
    <string name="user_info">用户信息</string>
    <string name="no_login">未登录</string>
</resources>
